[package]
name = "SUCKS"
version = "0.1.0"
authors = ["Ivan Avdeev <me@w23.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.9", features = ["full"]}
chrono = "0.4"
futures = "0.3.1"
byteorder = "1.3.2"
