[package]
name = "SUCKS"
version = "0.1.0"
authors = ["Ivan Avdeev <me@w23.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
byteorder = "1.3.2"
mio = {version = "0.7", features = ["os-poll", "tcp"]}
ochenslab = "0.0.2"
log = "0.4"
circbuf = "0.1"

# [dependencies.env_logger]
# default-features = false
# features = ["humantime", "termcolor", "atty"]

[profile.release]
#opt-level = 'z'  # Optimize for size. Binary grows by 200k non stripped, stripped is 4k less. wat; Also segfaults w/ lto+codegen options below
#opt-level = 3
#lto = true
#codegen-units = 1
#panic = 'abort'
#rpath = false
#debug-assertions = false
